--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,7 +19,19 @@
       }
     ],
     "paths": {
-      "@/*": ["./*"]
+      "@/app/*": ["./app/*"],
+      "@/components/*": [
+        "./_components/*"
+      ],
+      "@/assets/*": [
+        "./_assets/*"
+      ],
+      "@/config": [
+        "./_config/*"
+      ],
+      "@/providers": [
+        "./_providers/*"
+      ], 
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
