--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,9 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
-
+__test__
+.babelrc.ignore
+setupTests.js
+jest.config.js
+package-snapshot.json
 # dependencies
 /node_modules
 /.pnp
