--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,14 +1,15 @@
 {
   "compilerOptions": {
+    "baseUrl": ".",
     "target": "es5",
-    "lib": ["dom", "dom.iterable", "esnext"],
+    "lib": ["dom", "dom.iterable", "esnext", "ES2015"],
     "allowJs": true,
     "skipLibCheck": true,
     "strict": true,
     "noEmit": true,
     "esModuleInterop": true,
     "module": "esnext",
-    "moduleResolution": "bundler",
+    "moduleResolution": "node",
     "resolveJsonModule": true,
     "isolatedModules": true,
     "jsx": "preserve",
@@ -21,16 +22,16 @@
     "paths": {
       "@/app/*": ["./app/*"],
       "@/components/*": [
-        "./_components/*"
+        "./app/_components/*"
       ],
       "@/assets/*": [
-        "./_assets/*"
+        "./app/_assets/*"
       ],
       "@/config": [
-        "./_config/*"
+        "./app/_config/*"
       ],
       "@/providers": [
-        "./_providers/*"
+        "./app/_providers/*"
       ], 
     }
   },
