--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "moment": "^2.30.1",
     "next": "^14.1.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-flags-select": "^2.2.3",
+    "use-places-autocomplete": "^4.0.1"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^6.2.0",
@@ -24,6 +26,7 @@
     "@types/node": "^20",
     "@types/react": "^18.2.48",
     "@types/react-dom": "^18.2.18",
+    "@types/react-places-autocomplete": "^7.2.14",
     "@typescript-eslint/eslint-plugin": "^6.18.1",
     "@typescript-eslint/parser": "^6.18.1",
     "eslint": "^8.56.0",
