--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
     "@chakra-ui/react": "^2.8.2",
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
+    "axios": "^1.6.5",
     "framer-motion": "^10.18.0",
     "moment": "^2.30.1",
     "next": "^14.1.0",
     "react": "^18.2.0",
+    "react-countdown": "^2.3.5",
     "react-dom": "^18.2.0",
     "react-flags-select": "^2.2.3",
     "use-places-autocomplete": "^4.0.1"
