--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@emotion/styled": "^11.11.0",
     "axios": "^1.6.5",
     "framer-motion": "^10.18.0",
+    "localforage": "^1.10.0",
     "moment": "^2.30.1",
     "next": "^14.1.0",
     "react": "^18.2.0",
