--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-countdown": "^2.3.5",
     "react-dom": "^18.2.0",
     "react-flags-select": "^2.2.3",
+    "swiper": "^11.0.6",
     "use-places-autocomplete": "^4.0.1"
   },
   "devDependencies": {
