--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,20 +21,18 @@
     ],
     "paths": {
       "@/app/*": ["./app/*"],
-      "@/components/*": [
-        "./app/_components/*"
-      ],
-      "@/assets/*": [
-        "./app/_assets/*"
-      ],
-      "@/config": [
-        "./app/_config/*"
-      ],
-      "@/providers": [
-        "./app/_providers/*"
-      ], 
+      "@/components/*": ["./app/_components/*"],
+      "@/assets/*": ["app/_assets/SVG/*"],
+      "@/config": ["./app/_config/*"],
+      "@/providers": ["./app/_providers/*"]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
+  "include": [
+    "next-env.d.ts",
+    "**/*.ts",
+    "**/*.tsx",
+    ".next/types/**/*.ts",
+    "app/_assets/SVG/PlaceHolderAvatar.tsx"
+  ],
   "exclude": ["node_modules"]
 }
