--- a/package.json
+++ b/package.json
@@ -12,11 +12,12 @@
     "@chakra-ui/react": "^2.8.2",
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
+    "@react-google-maps/api": "^2.19.3",
     "axios": "^1.6.5",
     "framer-motion": "^10.18.0",
     "localforage": "^1.10.0",
     "moment": "^2.30.1",
-    "next": "^14.1.2",
+    "next": "^14.1.3",
     "react": "^18.2.0",
     "react-countdown": "^2.3.5",
     "react-dom": "^18.2.0",
@@ -27,8 +28,9 @@
   "devDependencies": {
     "@testing-library/jest-dom": "^6.2.0",
     "@testing-library/react": "^14.1.2",
+    "@types/google.maps": "^3.55.4",
     "@types/node": "^20",
-    "@types/react": "^18.2.48",
+    "@types/react": "^18.2.64",
     "@types/react-dom": "^18.2.18",
     "@types/react-places-autocomplete": "^7.2.14",
     "@typescript-eslint/eslint-plugin": "^6.18.1",
