--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-countdown": "^2.3.5",
     "react-dom": "^18.2.0",
     "react-flags-select": "^2.2.3",
+    "react-hot-toast": "^2.4.1",
     "swiper": "^11.0.6",
     "use-places-autocomplete": "^4.0.1"
   },
