--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-dom": "^18.2.0",
     "react-flags-select": "^2.2.3",
     "react-hot-toast": "^2.4.1",
+    "socket.io-client": "^4.7.5",
     "swiper": "^11.0.6",
     "use-places-autocomplete": "^4.0.1"
   },
