--- a/package.json
+++ b/package.json
@@ -18,12 +18,13 @@
     "framer-motion": "^10.18.0",
     "localforage": "^1.10.0",
     "moment": "^2.30.1",
-    "next": "^14.1.4",
+    "next": "^14.2.2",
     "react": "^18.2.0",
     "react-countdown": "^2.3.5",
     "react-dom": "^18.2.0",
     "react-flags-select": "^2.2.3",
     "react-hot-toast": "^2.4.1",
+    "sharp": "^0.33.3",
     "socket.io-client": "^4.7.5",
     "swiper": "^11.0.6",
     "use-places-autocomplete": "^4.0.1"
