--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-dom": "^18.2.0",
     "react-flags-select": "^2.2.3",
     "react-hot-toast": "^2.4.1",
+    "react-paystack": "^5.0.0",
     "sharp": "^0.33.3",
     "socket.io-client": "^4.7.5",
     "swiper": "^11.0.6",
