--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@emotion/styled": "^11.11.0",
     "@react-google-maps/api": "^2.19.3",
     "@react-oauth/google": "^0.12.1",
+    "@reduxjs/toolkit": "^2.2.5",
     "axios": "^1.6.5",
     "framer-motion": "^10.18.0",
     "localforage": "^1.10.0",
@@ -25,6 +26,7 @@
     "react-flags-select": "^2.2.3",
     "react-hot-toast": "^2.4.1",
     "react-paystack": "^5.0.0",
+    "react-redux": "^9.1.2",
     "sharp": "^0.33.3",
     "socket.io-client": "^4.7.5",
     "swiper": "^11.0.6",
