--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@react-oauth/google": "^0.12.1",
     "@reduxjs/toolkit": "^2.2.5",
     "axios": "^1.6.5",
+    "formik": "^2.4.6",
     "framer-motion": "^10.18.0",
     "localforage": "^1.10.0",
     "moment": "^2.30.1",
