--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-dom": "^18.2.0",
     "react-flags-select": "^2.2.3",
     "react-hot-toast": "^2.4.1",
+    "react-icons": "^5.2.1",
     "react-paystack": "^5.0.0",
     "react-redux": "^9.1.2",
     "sharp": "^0.33.3",
