--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-icons": "^5.2.1",
     "react-paystack": "^5.0.0",
     "react-redux": "^9.1.2",
+    "react-spring-lightbox": "^1.8.0",
     "sharp": "^0.33.3",
     "socket.io-client": "^4.7.5",
     "swiper": "^11.0.6",
@@ -39,6 +40,7 @@
   "devDependencies": {
     "@testing-library/jest-dom": "^6.2.0",
     "@testing-library/react": "^14.1.2",
+    "@types/fslightbox-react": "^1.7.7",
     "@types/google.maps": "^3.55.4",
     "@types/node": "^20",
     "@types/react": "^18.2.64",
