--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
     "@lottiefiles/dotlottie-react": "^0.6.3",
+    "@notionhq/client": "^2.2.15",
     "@react-google-maps/api": "^2.19.3",
     "@react-oauth/google": "^0.12.1",
     "@reduxjs/toolkit": "^2.2.5",
@@ -32,7 +33,7 @@
     "react-paystack": "^5.0.0",
     "react-redux": "^9.1.2",
     "react-spring-lightbox": "^1.8.0",
-    "sharp": "^0.33.4",
+    "sharp": "^0.33.5",
     "socket.io-client": "^4.7.5",
     "swiper": "^11.0.6",
     "use-places-autocomplete": "^4.0.1"
