--- a/.github/workflows/sub.yaml
+++ b/.github/workflows/sub.yaml
@@ -70,13 +70,16 @@ jobs:
       - name: Create environment file
         uses: SpicyPizza/create-envfile@v2.0
         with:
-          envkey_NOTION_DATABASE_ID: ${{ secrets.NOTION_DATABASE_ID }}
-          envkey_NOTION_API_KEY: ${{ secrets.NOTION_API_KEY }}
+          # envkey_NOTION_DATABASE_ID: ${{ secrets.NOTION_DATABASE_ID }}
+          # envkey_NOTION_API_KEY: ${{ secrets.NOTION_API_KEY }}
           directory: ./
           file_name: .env
           fail_on_empty: false
           sort_keys: false
-
+        env:
+          NOTION_DATABASE_ID: ${{ secrets.NOTION_DATABASE_ID }}
+          NOTION_API_KEY: ${{ secrets.NOTION_API_KEY }}
+          
       - name: Build Next.js application
         run: ${{ steps.detect-package-manager.outputs.runner }} next build
 
