--- a/.github/workflows/sub.yaml
+++ b/.github/workflows/sub.yaml
@@ -68,17 +68,19 @@ jobs:
         run: ${{ steps.detect-package-manager.outputs.manager }} ${{ steps.detect-package-manager.outputs.command }}
 
       - name: Create environment file
-        uses: SpicyPizza/create-envfile@v2.0
-        with:
-          # envkey_NOTION_DATABASE_ID: ${{ secrets.NOTION_DATABASE_ID }}
-          # envkey_NOTION_API_KEY: ${{ secrets.NOTION_API_KEY }}
-          directory: ./
-          file_name: .env
-          fail_on_empty: false
-          sort_keys: false
-        env:
-          NOTION_DATABASE_ID: ${{ secrets.NOTION_DATABASE_ID }}
-          NOTION_API_KEY: ${{ secrets.NOTION_API_KEY }}
+        run: |
+          echo "NOTION_DATABASE_ID=${{ secrets.NOTION_DATABASE_ID }}" >> .env
+          echo "NOTION_API_KEY=${{ secrets.NOTION_API_KEY }}" >> .env
+          echo "NOTION_DATABASE_ID=${{ secrets.NOTION_DATABASE_ID }}"
+          echo "NOTION_API_KEY=${{ secrets.NOTION_API_KEY }}"
+        # uses: SpicyPizza/create-envfile@v2.0
+        # with:
+        #   # envkey_NOTION_DATABASE_ID: ${{ secrets.NOTION_DATABASE_ID }}
+        #   # envkey_NOTION_API_KEY: ${{ secrets.NOTION_API_KEY }}
+        #   directory: ./
+        #   file_name: .env
+        #   fail_on_empty: false
+        #   sort_keys: false
           
       - name: Build Next.js application
         run: ${{ steps.detect-package-manager.outputs.runner }} next build
