--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -67,12 +67,15 @@ jobs:
       - name: Install dependencies
         run: ${{ steps.detect-package-manager.outputs.manager }} ${{ steps.detect-package-manager.outputs.command }}
 
-      - name: Create environment file
-        run: |
-          echo "NOTION_DATABASE_ID=${{ secrets.NOTION_DATABASE_ID }}" >> .env
-          echo "NOTION_API_KEY=${{ secrets.NOTION_API_KEY }}" >> .env
-          echo "NOTION_DATABASE_ID=${{ secrets.NOTION_DATABASE_ID }}"
-          echo "NOTION_API_KEY=${{ secrets.NOTION_API_KEY }}"
+      - name: Make envfile
+        uses: SpicyPizza/create-envfile@v2.0
+        with:
+          envkey_NOTION_DATABASE_ID: ${{ secrets.NOTION_DATABASE_ID }}
+          envkey_NOTION_API_KEY: ${{ secrets.NOTION_API_KEY }}
+          directory: ./
+          file_name: .env
+          fail_on_empty: false
+          sort_keys: false
         # uses: SpicyPizza/create-envfile@v2.0
         # with:
         #   # envkey_NOTION_DATABASE_ID: ${{ secrets.NOTION_DATABASE_ID }}
