--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,9 +17,6 @@ permissions:
   pages: write
   id-token: write
 
-defaults:
-      run:
-        working-directory: ./
 # Allow only one concurrent deployment, skipping runs queued between the run in-progress and latest queued.
 # However, do NOT cancel in-progress runs as we want to allow these production deployments to complete.
 concurrency:
@@ -27,6 +24,9 @@ concurrency:
   cancel-in-progress: false
 
 jobs:
+  deployment:
+    runs-on: ubuntu-latest
+    environment: production
   build:
     runs-on: ubuntu-latest
     steps:
