--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@react-google-maps/api": "^2.19.3",
     "@react-oauth/google": "^0.12.1",
     "@reduxjs/toolkit": "^2.2.5",
+    "@sentry/nextjs": "^9.32.0",
     "axios": "^1.6.5",
     "formik": "^2.4.6",
     "framer-motion": "^10.18.0",
